<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/exercise_details_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/FragmentStyle">

    <EditText
        android:id="@+id/txt_exercisedetails_name_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/exercise_name"
        android:imeOptions="flagNoExtractUi"/>

    <TextView
        android:id="@+id/txt_exercisedetails_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/txt_exercisedetails_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exercise_description"
        android:lines="10"
        android:layout_marginTop="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:imeOptions="flagNoExtractUi"/>

    <CheckBox
        android:id="@+id/checkbox_exercisedetails_rm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:text="@string/calculate_1rm_based_on_trainings"
        app:layout_constraintTop_toBottomOf="@id/txt_exercisedetails_description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/txt_exercisedetails_rm"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/checkbox_exercisedetails_rm"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:inputType="numberDecimal"
        android:imeOptions="flagNoExtractUi"/>

    <ImageButton
        android:id="@+id/btn_exercisedetails_rm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@id/txt_exercisedetails_rm"
        app:layout_constraintTop_toBottomOf="@id/checkbox_exercisedetails_rm"
        android:src="@drawable/vector_info"
        android:backgroundTint="@color/fragmentsBackground"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_exercisedetails_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@drawable/vector_save"
        android:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>