<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/set_list_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_setlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="10"
        tools:listitem="@layout/view_set_list_item" />

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_addset_fab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:applyMotionScene="true"
        app:currentState="@id/start"
        app:motionProgress="0"
        app:layoutDescription="@xml/scene_add_button">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_list_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="36dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/vector_cross" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_setlist_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:applyMotionScene="true"
        app:currentState="@id/start"
        app:motionProgress="0"
        app:layoutDescription="@xml/scene_listitemclick">

        <TextView
            android:id="@+id/view_fake_listitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_listitem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.motion.widget.MotionLayout>

</androidx.constraintlayout.widget.ConstraintLayout>