<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/training_list_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/TrainingFragmentStyle">

    <LinearLayout
        android:layout_width="match_parent"
...

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.motion.widget.MotionLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_traininglist"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
...
